[package]
name = "rmock"
version = "1.0.1"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
notify = "8.2"
matchit = "0.9"
reqwest = "0.13"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true